Fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,15 @@
 html {
-    box-sizing: border-box;
-    font-family: sans-serif;
-  }
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
 
-  *, *::before, *::after {
-    box-sizing: inherit;
-  }
-  .img-flex {
-    display: block;
-    width: 100%
-  }
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+.img-flex {
+  display: block;
+  width: 100%;
+}
 
 .card {
   overflow: hidden;
